--- a/2-Form/Form.html
+++ b/2-Form/Form.html
@@ -11,13 +11,15 @@
       <p>Уже есть аккаунт <a href="#">Войти</a></p>
     </header>
     <section>
-      <form action="/test">
+      <form action="#">
         <div>
-          <p>Моя компания:</p>
-          <input type="name" placeholder="Имя" name="name" />
-          <input type="name" placeholder="Фамилия" name="surname" />
-          <input type="email" placeholder="Email" name="email" />
+          <input type="company" placeholder="Моя компания" name="company" />
         </div>
+        <div>
+          <input type="name" placeholder="Имя" name="name" />
+          <input type="surname" placeholder="Фамилия" name="surname" />
+        </div>
+        <div><input type="email" placeholder="Email" name="email" /></div>
         <div><button type="submit">Зарегистрироваться &rarr;</button></div>
       </form>
     </section>
