--- a/2-Form/Form.html
+++ b/2-Form/Form.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo</title>
+    <meta name="Keywords" content="регистрация, форма"/>
+    <meta name="Description" content="Форма регистрации"/>
+    <title>Форма регистрации</title>
   </head>
   <body>
     <header>
@@ -12,15 +14,11 @@
     </header>
     <section>
       <form action="#">
-        <div>
-          <input type="company" placeholder="Моя компания" name="company" />
-        </div>
-        <div>
-          <input type="name" placeholder="Имя" name="name" />
-          <input type="surname" placeholder="Фамилия" name="surname" />
-        </div>
-        <div><input type="email" placeholder="Email" name="email" /></div>
-        <div><button type="submit">Зарегистрироваться &rarr;</button></div>
+        <input type="company" placeholder="Моя компания" name="company" />
+        <input type="name" placeholder="Имя" name="name" />
+        <input type="surname" placeholder="Фамилия" name="surname" />
+        <input type="email" placeholder="Email" name="email" />
+        <button type="submit">Зарегистрироваться &rarr;</button>
       </form>
     </section>
     <footer>
