Сделала "В" картинкой в ссылке

--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <a href="#">В</a>
+      <div>
+      <a href="#"><img src="images/Rectangle 2.png" alt="В" />В</a>
+    </div>
       <nav>
         <a href="#">Мой блог</a>
         <a href="#">HTML и CSS</a>
