Исправила навигацию и параграфы

--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -14,13 +14,12 @@
   <body>
     <header>
       <nav>
-        <a class="link-v" href="#"
-          ><img class="img" src="images/Rectangle 2.png" alt="В" />В</a
-        >
-        <a class="link-myblog" href="#">Мой блог</a>
-        <a class="link-html" href="#">HTML и CSS</a>
-        <a class="link-frontend" href="#">Frontend</a>
-        <a href="#">Backend</a>
+        <a class="link" href="#">
+          <img class="logo" src="images/Rectangle 2.png" alt="Мой блог" />В
+           <a class="link" href="#">Мой блог </a>
+        <a class="link" href="#">HTML и CSS</a>
+        <a class="link" href="#">Frontend</a>
+        <a class="link" href="#">Backend</a>
         <input type="search" placeholder="Поиск" />
       </nav>
     </header>
@@ -36,9 +35,11 @@
           <p class="author__job">Разработчик</p>
         </div>
       </section>
+      <div class="image">
+        <img src="images/Rectangle 181.png" alt="Display" />
+      </div>
       <section class="text">
-        <img class="text__img" src="images/Rectangle 181.png" alt="Display" />
-        <p class="text__elem1">
+        <p class="text__elem">
           Теория цвета — это особенности эмоционального восприятия человеком тех
           или иных цветовых решений. Цвета и различные их комбинации влияют на
           психику человека, а значит, во многом определяют его поведение.
@@ -48,13 +49,13 @@
           подтолкнуть посетителей к совершению целевых действий, повысить
           конверсию.
         </p>
-        <p class="text__elem2">
+        <p class="text__elem">
           Универсального ответа на вопрос, как тот или иной цвет влияет на
           разных людей, нет. Эмоциональная и поведенческая реакция каждого
           человека зависит от личного опыта. Вместе с тем можно выделить
           определенные закономерности влияния цветов на поведение пользователей.
         </p>
-        <p class="text__elem3">
+        <p class="text__elem">
           В исследовании «Влияние цвета на маркетинг» (Impact of color on
           marketing) говорится, что использование разных цветов может
           существенно влиять на настроение и поведение потребителей.
