Новый вариант блока логотипа, букву В пока не знаю как поместить в квадрат

--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -15,8 +15,10 @@
     <header>
       <nav>
         <a class="link" href="#">
-          <img class="logo" src="images/Rectangle 2.png" alt="Мой блог" />В
-           <a class="link" href="#">Мой блог </a>
+          <img class="logo" src="images/Rectangle 2.png" alt="Мой блог" />
+          <span class="title">В</span>
+          Мой блог
+        </a>
         <a class="link" href="#">HTML и CSS</a>
         <a class="link" href="#">Frontend</a>
         <a class="link" href="#">Backend</a>
