--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -13,16 +13,19 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+        <div class="logo__img"><span class="title">В</span></div>
+        <div class="logo__text">
+          <a class="logo__link" href="#">Мой блог</a>
+        </div>
+      </div>
       <nav>
-        <a class="link" href="#">
-          <img class="logo" src="images/Rectangle 2.png" alt="Мой блог" />
-          <span class="title">В</span>
-          Мой блог
-        </a>
         <a class="link" href="#">HTML и CSS</a>
         <a class="link" href="#">Frontend</a>
         <a class="link" href="#">Backend</a>
-        <input type="search" placeholder="Поиск" />
+        <div class="search">
+          <input type="search" placeholder="    Поиск" />
+        </div>
       </nav>
     </header>
     <main>
