--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Теория цвета - Как цвет влияет на поведение потребителей</title>
   </head>
+  <!-- test -->
   <body>
     <header>
       <div class="logo">
@@ -35,13 +36,13 @@
         </p>
         <h1>Теория цвета - Как цвет влияет на поведение потребителей</h1>
         <div class="author">
-          <img src="images/Ellipse 1.png" alt="Автор блога" />
+          <img src="images/Ellipse1.png" alt="Автор блога" />
           <p class="author__name">Наталья Васильева</p>
           <p class="author__job">Разработчик</p>
         </div>
       </section>
       <div class="image">
-        <img src="images/Rectangle 181.png" alt="Display" />
+        <img src="images/Rectangle181.png" alt="Display" />
       </div>
       <section class="text">
         <p class="text__elem">
