--- a/2-Blog/blog.html
+++ b/2-Blog/blog.html
@@ -35,7 +35,7 @@
         </p>
         <h1>Теория цвета - Как цвет влияет на поведение потребителей</h1>
         <div class="author">
-          <img src="images/Ellipse 1.png" alt="Автор блога" />
+          <img src="images/Ellipse.png" alt="Автор блога" />
           <p class="author__name">Наталья Васильева</p>
           <p class="author__job">Разработчик</p>
         </div>
