--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -9,6 +9,12 @@
       content="Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>Теория цвета - Как цвет влияет на поведение потребителей</title>
   </head>
   <body>
@@ -23,7 +29,7 @@
         <a class="link" href="#">HTML и CSS</a>
         <a class="link" href="#">Frontend</a>
         <a class="link" href="#">Backend</a>
-        <div class="search">
+        <div>
           <input type="search" placeholder="    Поиск" />
         </div>
       </nav>
@@ -35,13 +41,19 @@
         </p>
         <h1>Теория цвета - Как цвет влияет на поведение потребителей</h1>
         <div class="author">
-          <img src="images/Ellipse.png" alt="Автор блога" />
-          <p class="author__name">Наталья Васильева</p>
-          <p class="author__job">Разработчик</p>
+          <img
+            class="author__img"
+            src="images/Ellipse1.png"
+            alt="Автор блога"
+          />
+          <div id="author">
+            <p class="author__name">Наталья Васильева</p>
+            <p class="author__job">Разработчик</p>
+          </div>
         </div>
       </section>
       <div class="image">
-        <img src="images/Rectangle 181.png" alt="Display" />
+        <img src="images/Rectangle181.png" alt="Display" />
       </div>
       <section class="text">
         <p class="text__elem">
