--- a/1-Blog/blog.html
+++ b/1-Blog/blog.html
@@ -46,16 +46,16 @@
             src="images/Ellipse1.png"
             alt="Автор блога"
           />
-          <div id="author">
-            <p class="author__name">Наталья Васильева</p>
-            <p class="author__job">Разработчик</p>
+          <div class="profile">
+            <p class="profile__name">Наталья Васильева</p>
+            <p class="profile__job">Разработчик</p>
           </div>
         </div>
       </section>
-      <div class="image">
-        <img src="images/Rectangle181.png" alt="Display" />
-      </div>
       <section class="text">
+        <div class="image">
+          <img src="images/Rectangle181.png" alt="Display" />
+        </div>
         <p class="text__elem">
           Теория цвета — это особенности эмоционального восприятия человеком тех
           или иных цветовых решений. Цвета и различные их комбинации влияют на
