Добавила якорные ссылки

--- a/3-Finio/index.html
+++ b/3-Finio/index.html
@@ -30,12 +30,12 @@
         /></a>
         <nav>
           <ul class="header__menu">
-            <li class="header__menu-item"><a href="">Возможности</a></li>
-            <li class="header__menu-item"><a href="">Тарифы</a></li>
+            <li class="header__menu-item"><a href="#benefits">Возможности</a></li>
+            <li class="header__menu-item"><a href="#rates">Тарифы</a></li>
             <li class="header__menu-item">
-              <a href="">Отзывы</a>
+              <a href="#reviews">Отзывы</a>
             </li>
-            <li class="header__menu-item"><a href="">Поддержка клиентов</a></li>
+            <li class="header__menu-item"><a href="#support">Поддержка клиентов</a></li>
           </ul>
         </nav>
         <button class="header__login button">Личный кабинет</button>
@@ -45,7 +45,6 @@
       </div>
     </header>
     <section class="section_hero">
-      
       <div class="hero">
         <div class="hero__left">
           <h1 class="hero__h1">
@@ -70,7 +69,7 @@
         </div>
       </div>
       </section>
-      <section class="benefits">
+      <section class="benefits" id="benefits">
         <div class="benefits__wrapper">
         <div class="benefits__item">
         <img src="./images/Frame.svg" alt="Изображение" />
@@ -95,7 +94,6 @@
            </div> 
             <img class="graphics__img" src="./images/balans.svg" alt="Изображение баланса">
         </div>
-
         <div class="graphics__reports graphics__item">
           <img class="graphics__img" src="./images/report 1.png" alt="Изображение примера отчета">
           <div>
@@ -103,9 +101,7 @@
             <div class="graphics__reports-paragraph paragraph">Получите полную информацию о состоянии вашего бизнеса, включающую все необходимые показатели для принятия правильных решений</div>
            </div> 
         </div>
-
         <div class="graphics__profit graphics__item">
-          
           <div>
             <h2 class="graphics__profit_h2 h2">Какие товары приносят прибыль	</h2>
             <div class="graphics__profit-paragraph paragraph">Находите точки роста, делайте упор на рентабельные товары и увеличивайте свой доход</div>
@@ -178,9 +174,8 @@
 <div class="mobile__paragraph paragraph">Пользоваться всем функционалом сервиса удобно в любом месте и с любых устройств</div>
   <img class="mobile__img" src="./images/Group 203.svg" alt="Изображение версий">
 </div>
-
 </section>
-<section class="support">
+<section class="support" id="support">
   <div class="support__wrapper">
     <img src="./images/suppot.svg" alt="">
     <div class="support__item">
@@ -208,7 +203,7 @@
     </div>
   </div>
 </section>
-<section class="rates">
+<section class="rates" id="rates">
   <div class="rates__wrapper">
     <h2 class="rates__h2 h2">Тарифы</h2>
 <div class="rates__paragraph paragraph">Пользоваться всем функционалом сервиса удобно в любом месте и с любых устройств</div>
@@ -236,7 +231,6 @@
   <div class="rates__card-price_total">Общая&nbsp;стоимость</div>
   <div class="rates__card-price_total-num">8 940 ₽ ₽</div>
   <div class="rates__card-price_benefit">Ваша выгода</div>
-  
   <div class="rates__card-price_benefit-num primary">3 000 ₽</div>
   <div class="rates__card-price_month">Стоимость&nbsp;месяца</div>
   <div class="rates__card-price_month-num">1 490 ₽/мес</div>
@@ -262,8 +256,7 @@
 </div>
 </div>
 </section>  
-
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="reviews__wrapper">
      <h2 class="reviews__h2 h2">Отзывы</h2>
      <div class="review">
@@ -274,17 +267,9 @@
   <div class="review__author-job">Продавец Wildberries</div>
 </div></div>
 <img class="review__author-img" src="./images/image 49.svg" alt="Изображение человека">
-
      </div>
-
   </div>
 </section>
-
-
-
-
-
-
     <footer class="footer">
       <div class="footer__wrapper">
         <div class="footer__wrapper-menu">
@@ -334,7 +319,5 @@
       </div>
     </div>
     </footer>
-
-
   </body>
 </html>
